# recsrmesh

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PROTOCOL_SPEC.md  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/recsrmesh/: __init__.py  __main__.py  _fake_client.py  ble.py  crypto.py  masp.py  mcp.py  mcp_crypto.py  mesh.py  protocol.py
tests/: test_crypto.py  test_mcp.py  test_replay.py
tests/fixtures/: capture_20260206_064515_device_33897.json  capture_20260206_065417_device_33896.json  capture_20260207_050246_device_33896.json  capture_20260207_053318_device_33896.json
